...
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RecyclerViewItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@id/title"
        style="@style/ItemSubTitle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="env.CI" />

    <TextView
        android:id="@+id/subTitle"
        style="@style/ItemTitle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
...
